--- a/tools/mlir-proto-lsp-server/CMakeLists.txt
+++ b/tools/mlir-proto-lsp-server/CMakeLists.txt
@@ -12,11 +12,7 @@ if(SANDBOX_ENABLE_ALP)
 endif()
 
 if(SANDBOX_ENABLE_ITERATORS)
-  list(APPEND dialect_libs MLIRIterators)
-  list(APPEND dialect_libs MLIRTabular)
-  list(APPEND conversion_libs MLIRIteratorsToLLVM)
-  list(APPEND conversion_libs MLIRTabularToLLVM)
-  list(APPEND conversion_libs MLIRStatesToLLVM)
+  list(APPEND dialect_libs MLIRCvm)
 endif()
 
 target_link_libraries(mlir-proto-lsp-server
