Cleanup lib folder

--- a/lib/Dialects/Cvm/IR/CMakeLists.txt
+++ b/lib/Dialects/Cvm/IR/CMakeLists.txt
@@ -1,13 +1,14 @@
-add_mlir_library(MLIRTabular
-  Tabular.cpp
+add_mlir_library(MLIRCvm
+  Cvm.cpp
 
   LINK_LIBS PUBLIC
   MLIRFuncDialect
   MLIRInferTypeOpInterface
   MLIRIR
   MLIRLLVMDialect
+  MLIRTabular
 
   DEPENDS
-  MLIRTabularInterfacesIncGen
-  MLIRTabularOpsIncGen
+  MLIRCvmInterfacesIncGen
+  MLIRCvmOpsIncGen
 )
