--- a/lib/CAPI/CMakeLists.txt
+++ b/lib/CAPI/CMakeLists.txt
@@ -1,11 +1,7 @@
-add_mlir_public_c_api_library(IteratorsCAPI
+add_mlir_public_c_api_library(CvmCAPI
     Dialects.cpp
     Passes.cpp
   LINK_LIBS PUBLIC
-    MLIRIterators
-    MLIRIteratorsToLLVM
-    MLIRTabular
-    MLIRTabularToLLVM
+    MLIRCvm
     MLIRPass
-    MLIRStatesToLLVM
 )
